<resources>
    <string name="app_name">ToDoApp</string>
    <string name="login_welcome_message">Hallo, bitte melde dich an, um die ToDo-App zu nutzen.</string>
    <string name="login_email">E-Mail-Adresse</string>
    <string name="login_password">Passwort</string>
    <string name="login_action">Login</string>
    <string name="error_invalid_mail_message">Die E-Mail-Adresse ist nicht gültig.</string>
    <string name="error_empty_mail_message">Gib eine E-Mail-Adresse ein, um dich anzumelden.</string>
    <string name="error_empty_password_message">Gib ein Passwort ein, um dich anzumelden.</string>
    <string name="error_wrong_credentials_message">Falsche Zugangsdaten.</string>
    <string name="error_wrong_password_length_message">Das Passwort muss genau 6 Zeichen lang sein.</string>
    <string name="to_do_list_successful_update_message">Erfolgreich aktualisiert.</string>
    <string name="menu_non_done_favourite_date_title">Nicht erledigt, Favorit, Zeit</string>
    <string name="menu_non_done_datum_favourite_title">Nicht erledigt, Zeit, Favorit</string>
    <string name="menu_done_favourite_date_title">Erledigt, Favorit, Zeit</string>
    <string name="menu_done_date_favourite_title">Erledigt, Zeit, Favorit</string>
    <string name="todo_detail_description_desc">Beschreibung</string>
    <string name="todo_detail_date_desc">Wähle ein Datum</string>
    <string name="todo_detail_time_desc">Wähle einen Zeitpunkt</string>
    <string name="todo_detail_name_desc">Name</string>
    <string name="todo_detail_done_desc">Als erledigt markieren?</string>
    <string name="todo_detail_favourite_desc">Als favorit markieren?</string>
    <string name="todo_details_contacts_title">Verknüpfte Kontakte</string>
    <string name="to_do_list_empty_to_do_error_message">Fehler: Leeres ToDo zurück bekommen.</string>
    <string name="to_do_list_to_do_not_find_in_db_error_message">Fehler: DB-ToDo konnte nicht gelöscht werden</string>
    <string name="to_do_detail_want_remove_to_do_message">Möchtest du das ToDo wirklich löschen?</string>
    <string name="to_do_detail_want_remove_to_do_title">ToDo löschen</string>
    <string name="contact_item_delete_button_action">Löschen</string>
</resources>
