<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_done_date_favourite"
        android:title="@string/menu_done_date_favourite_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_done_favourite_date"
        android:title="@string/menu_done_favourite_date_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_non_done_date_favourite"
        android:title="@string/menu_non_done_datum_favourite_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_non_done_favourite_date"
        android:title="@string/menu_non_done_favourite_date_title"
        app:showAsAction="never" />

</menu>
